# rust_game

./: .gitignore  Cargo.toml  README.md
old/: 0x72_16x16DungeonTileset_walls.json  base.json  base.tsx  base_map.json  colony-db-map.tmx  foo.json  level1.tmx
resources/: ashlands_tileset.json  dungeon.json  dungeon.test.json  lvl1.json  lvl1.test.json  lvl2.json  walls.json
src/: app.rs  assets.rs  components.rs  example.rs  keyboard.rs  lib.rs  loader.rs  logger.rs  main.old.rs  main.rs  systems.rs  world.rs
src/assets/: entity_factory.rs  mod.rs  sprite.rs  tilemap.rs  tileparser.rs
src/entities/: level.rs
src/scenes/: level.rs  mod.rs
src/setup/: input.rs  mod.rs  resources.rs
src/systems/: player.rs
