[package]
name = "game"
version = "0.1.0"
authors = ["Philipp Bisson <pb@25th-floor.com>"]

[dependencies]
serde = "1"
serde_derive = "1.0.79"
serde_json = "1.0"
ggez = "0.4"
sdl2 = "0.31"
rand = "0.5.5"
ggez-goodies = { git = "https://github.com/ggez/ggez-goodies", branch = "master" }

specs = "0.12.3"
specs-derive = "0.2"
warmy = "0.9"

# Utility stuff
log = "0.4"
fern = {version = "0.5", features = ["colored"] }
chrono = "0.4"
failure = "0.1"
